--- a/src/main/resources/com/example/demo/t1.fxml
+++ b/src/main/resources/com/example/demo/t1.fxml
@@ -1,48 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="349.0" prefWidth="585.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
    <children>
-      <ListView fx:id="myListView" editable="true" layoutX="300.0" layoutY="25.0" prefHeight="350.0" prefWidth="267.0" />
-      <Button fx:id="addFoodAddButton" layoutX="14.0" layoutY="231.0" mnemonicParsing="false" onAction="#addFood" prefHeight="25.0" prefWidth="267.0" text="Add">
+      <ListView fx:id="myListView" editable="true" layoutX="304.0" layoutY="19.0" prefHeight="310.0" prefWidth="267.0" />
+      <Button fx:id="addFoodAddButton" layoutX="14.0" layoutY="185.0" mnemonicParsing="false" onAction="#addFood" prefHeight="25.0" prefWidth="267.0" text="Add">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
-      <TextField fx:id="foodNameTextField" layoutX="107.0" layoutY="25.0" prefHeight="25.0" prefWidth="174.0" />
-      <TextField fx:id="foodNumberTextField" layoutX="107.0" layoutY="75.0" prefHeight="25.0" prefWidth="174.0" />
-      <Label layoutX="14.0" layoutY="23.0" text="Name:">
+      <TextField fx:id="foodNameTextField" layoutX="93.0" layoutY="21.0" prefHeight="25.0" prefWidth="188.0" />
+      <TextField fx:id="foodNumberTextField" layoutX="93.0" layoutY="66.0" prefHeight="25.0" prefWidth="73.0" />
+      <Label layoutX="14.0" layoutY="19.0" text="Name:">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="14.0" layoutY="77.0" text="Number:">
+      <Label layoutX="14.0" layoutY="64.0" prefHeight="30.0" prefWidth="73.0" text="Number:">
          <font>
-            <Font size="15.0" />
+            <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="14.0" layoutY="123.0" text="Date:">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
-      <DatePicker fx:id="foodDatePicker" layoutX="107.0" layoutY="125.0" />
-      <Button fx:id="addFoodEditButton" layoutX="14.0" layoutY="281.0" mnemonicParsing="false" onAction="#editFood" prefHeight="25.0" prefWidth="267.0" text="Edit">
+      <Button fx:id="addFoodEditButton" layoutX="14.0" layoutY="235.0" mnemonicParsing="false" onAction="#editFood" prefHeight="25.0" prefWidth="267.0" text="Edit">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
-      <Button fx:id="addFoodDeleteButton" layoutX="14.0" layoutY="331.0" mnemonicParsing="false" onAction="#deleteFood" prefHeight="25.0" prefWidth="267.0" text="Delete">
+      <Button fx:id="addFoodDeleteButton" layoutX="14.0" layoutY="285.0" mnemonicParsing="false" onAction="#deleteFood" prefHeight="25.0" prefWidth="267.0" text="Delete">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
+      <ComboBox fx:id="unitComboBox" layoutX="174.0" layoutY="66.0" prefHeight="25.0" prefWidth="107.0" />
+      <Button fx:id="clearButton" layoutX="14.0" layoutY="104.0" mnemonicParsing="false" onAction="#clearFoodFields" prefHeight="25.0" prefWidth="51.0" text="Clear" />
    </children>
 </AnchorPane>
