--- a/src/main/resources/com/example/demo/t2.fxml
+++ b/src/main/resources/com/example/demo/t2.fxml
@@ -1,11 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="240.0" prefWidth="360.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="390.0" text="ADD" />
-      <Button layoutX="412.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="174.0" text="Delete" />
+      <Label layoutX="12.0" layoutY="69.0" prefHeight="33.0" prefWidth="260.0" text="This item is not in all foods collection!">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="12.0" layoutY="24.0" text="!!! WARNING !!!">
+         <font>
+            <Font size="30.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="272.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../WarningIcon.png" />
+         </image>
+      </ImageView>
+      <Button layoutX="117.0" layoutY="120.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="126.0" text="OK">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Button>
+      <Button layoutX="50.0" layoutY="193.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="260.0" text="Add to all foods collection" />
    </children>
 </AnchorPane>
