added confList to conf posoble items to buy and button to add new items in collection. Problems: cant be same items in COF and MVL. Fix confList.txt configuration after adding new items. add more checks for type of foods and case.

--- a/src/main/resources/com/example/demo/t1.fxml
+++ b/src/main/resources/com/example/demo/t1.fxml
@@ -44,8 +44,10 @@
       <ComboBox fx:id="unitComboBox" layoutX="218.0" layoutY="213.0" prefHeight="25.0" prefWidth="122.0" />
       <Button fx:id="clearButton" layoutX="14.0" layoutY="166.0" mnemonicParsing="false" onAction="#clearFoodFields" prefHeight="25.0" prefWidth="58.0" text="Clear" />
       <Button fx:id="saveButton" layoutX="14.0" layoutY="63.0" mnemonicParsing="false" onAction="#saveListToTxt" prefHeight="25.0" prefWidth="58.0" text="Save" />
+      <Button fx:id="addtoAFCButton" layoutX="14.0" layoutY="136.0" mnemonicParsing="false" onAction="#addNewFood" prefHeight="25.0" prefWidth="58.0" text="addCF" />
+
       <ListView fx:id="searchListView" layoutX="93.0" layoutY="63.0" prefHeight="128.0" prefWidth="249.0" />
       <Button fx:id="loadButton" layoutX="14.0" layoutY="102.0" mnemonicParsing="false" onAction="#loadListFromTxt" prefHeight="25.0" prefWidth="58.0" text="Load" />
-      <Button fx:id="searchButton" layoutX="278.0" layoutY="21.0" mnemonicParsing="false" onAction="#search" prefHeight="35.0" prefWidth="64.0" text="Shearch" />
+      <Button fx:id="searchButton" layoutX="278.0" layoutY="21.0" mnemonicParsing="false" onAction="#search" prefHeight="35.0" prefWidth="64.0" text="Search" />
    </children>
 </AnchorPane>
