--- a/src/main/resources/com/example/demo/t1.fxml
+++ b/src/main/resources/com/example/demo/t1.fxml
@@ -20,13 +20,13 @@
          <font>
             <Font size="16.0" />
          </font></TextField>
-      <TextField fx:id="foodNumberTextField" layoutX="93.0" layoutY="241.0" prefHeight="25.0" prefWidth="122.0" />
+      <TextField fx:id="foodNumberTextField" layoutX="110.0" layoutY="241.0" prefHeight="25.0" prefWidth="100.0" />
       <Label layoutX="20.0" layoutY="24.0" text="Name:">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="14.0" layoutY="238.0" prefHeight="30.0" prefWidth="84.0" text="Number:">
+      <Label layoutX="14.0" layoutY="238.0" prefHeight="30.0" prefWidth="90.0" text="Number:">
          <font>
             <Font size="20.0" />
          </font>
@@ -42,11 +42,12 @@
          </font>
       </Button>
       <ComboBox fx:id="unitComboBox" layoutX="217.0" layoutY="241.0" prefHeight="25.0" prefWidth="122.0" />
-      <Button fx:id="clearButton" layoutX="14.0" layoutY="183.0" mnemonicParsing="false" onAction="#clearFoodFields" prefHeight="25.0" prefWidth="58.0" text="Clear" />
+      <Button fx:id="clearButton" layoutX="14.0" layoutY="143.0" mnemonicParsing="false" onAction="#clearFoodFields" prefHeight="25.0" prefWidth="58.0" text="Clear" />
       <Button fx:id="saveButton" layoutX="14.0" layoutY="63.0" mnemonicParsing="false" onAction="#saveListToTxt" prefHeight="25.0" prefWidth="58.0" text="Save" />
-      <Button fx:id="addtoAFCButton" layoutX="14.0" layoutY="143.0" mnemonicParsing="false" onAction="#addNewFood" prefHeight="25.0" prefWidth="58.0" text="addCF" />
+      <Button fx:id="addtoAFCButton" layoutX="14.0" layoutY="173.0" mnemonicParsing="false" onAction="#addNewFood" prefHeight="25.0" prefWidth="58.0" text="addCF" />
+      <Button fx:id="deleteAFCButton" layoutX="14.0" layoutY="203.0" mnemonicParsing="false" onAction="#removeFoodConf" prefHeight="25.0" prefWidth="58.0" text="deleteCF" />
 
-      <ListView fx:id="searchListView" layoutX="93.0" layoutY="63.0" prefHeight="145.0" prefWidth="249.0" />
+      <ListView fx:id="searchListView" layoutX="93.0" layoutY="63.0" prefHeight="164.0" prefWidth="249.0" />
       <Button fx:id="loadButton" layoutX="14.0" layoutY="103.0" mnemonicParsing="false" onAction="#loadListFromTxt" prefHeight="25.0" prefWidth="58.0" text="Load" />
       <Button fx:id="searchButton" layoutX="278.0" layoutY="21.0" mnemonicParsing="false" onAction="#search" prefHeight="35.0" prefWidth="64.0" text="Search" />
    </children>
